--- a/app/src/main/res/layout/repository_item.xml
+++ b/app/src/main/res/layout/repository_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="5dp"
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
+            android:layout_marginStart="10dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/txt_repository_name"
@@ -37,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="5dp"
-                android:textSize="23sp"
+                android:textSize="18sp"
                 android:text="@string/txt_repository_desc_default"
                 android:breakStrategy="simple"/>
             <TextView
@@ -46,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="5dp"
-                android:textSize="23sp"
+                android:textSize="18sp"
                 android:text="@string/txt_repository_lang_default"
                 android:breakStrategy="simple"/>
             <TextView
@@ -55,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="5dp"
-                android:textSize="23sp"
+                android:textSize="18sp"
                 android:text="@string/txt_repository_stars_default"
                 android:breakStrategy="simple"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
